--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,25 @@ plugins {
 group 'sarafc'
 version '1.0-SNAPSHOT'
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(11)
+    }
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '4.3.3'
+    implementation group: 'io.cucumber', name: 'cucumber-java', version: '6.10.3'
+    testImplementation group: 'io.cucumber', name: 'cucumber-junit', version: '6.10.3'
+    implementation group: 'tech.grasshopper', name: 'extentreports-cucumber6-adapter', version: '2.8.1'
+    testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '3.3.0'
+    implementation group: 'org.json', name: 'json', version: '20180813'
+    testImplementation(platform('org.junit:junit-bom:5.7.1'))
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.7.1'
 }
 
 test {
