--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,7 @@ plugins {
 group 'sarafc'
 version '1.0-SNAPSHOT'
 
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(11)
-    }
-}
+sourceCompatibility = 1.11
 
 repositories {
     mavenCentral()
@@ -19,11 +15,11 @@ dependencies {
     testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '4.3.3'
     implementation group: 'io.cucumber', name: 'cucumber-java', version: '6.10.3'
     testImplementation group: 'io.cucumber', name: 'cucumber-junit', version: '6.10.3'
-    implementation group: 'tech.grasshopper', name: 'extentreports-cucumber6-adapter', version: '2.8.1'
     testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '3.3.0'
     implementation group: 'org.json', name: 'json', version: '20180813'
     testImplementation(platform('org.junit:junit-bom:5.7.1'))
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.7.1'
+    implementation group: 'tech.grasshopper', name: 'extentreports-cucumber6-adapter', version: '2.8.4'
 }
 
 test {
